# xtract

./: .gitignore  Cargo.toml  README.md  configuration.toml
benches/: xtract_profile.rs
data/: demo1.csv  synthetic_demo_data.csv  track_and_trace_synthetic.csv  track_and_trace_synthetic_nn.csv  tst2.csv  tst3.csv  user_defined_rules.json  user_transactions_small.csv
src/: cli.rs  client.rs  configuration.rs  lib.rs  main.rs  transformer.rs
src/loaders/: csv_format.rs  dataframe.rs  datatypes.rs  error.rs  frame.rs  mod.rs  s3_connector.rs
src/parsers/: iban.rs  mod.rs
src/transformers/: simple.rs
