[package]
name = "xtract"
description = "Simple CLI to manage data"
keywords = ["data", "cli", "api"]
license = "Apache-2.0/MIT"
repository = "https://github.com/fgadaleta/xtract"
version = "0.0.2"
authors = ["Francesco Gadaleta <francesco@amethix.com>"]
edition = "2018"


[dependencies]
anyhow = "1.0.33"
base64 = "0.13.0"
clap = "3.0.0-beta.2"
reqwest = {version = "0.10.8", features=["blocking", "json"]}
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
toml = "0.5.7"
