[package]
name = "xtract"
description = "CLI to manage data for the ncode platform"
keywords = ["data", "cli", "api"]
categories = ["algorithms", "mathematics", "science"]
license = "Apache-2.0/MIT"
repository = "https://github.com/fgadaleta/xtract"
version = "0.0.2"
authors = ["Francesco Gadaleta <francesco@amethix.com>"]
edition = "2018"


[dependencies]
anyhow = "1.0.33"
base64 = "0.13.0"
clap = "3.0.0-beta.2"
csv = "1.1.3"
histo_fp = "0.2.1"
lazy_static = "1.4.0"
noisy_float = "0.1.13"
once_cell = "1.5.2"
regex = "1.4.1"
reqwest = {version = "0.10.8", features=["blocking", "json"]}
rusoto_core = "0.45.0"
rusoto_credential = "0.45.0"
rusoto_s3 = "0.45.0"
rust-s3 = "0.26.2"
serde = "1.0.117"
serde_derive = "1.0.117"
serde_json = "1.0.59"
tokio = { version = "0.2.0", features = ["rt-threaded"] }
# tokio = { version = "0.3.0", features = ["rt-multi-thread"] }
toml = "0.5.7"
polars = "0.9.0"
arrow = {version = "2", default_features = false}
ndarray = "0.14.0"
rayon = "1.5"
indicatif = "0.15.0"
criterion = "0.3"
home-dir = "0.1.0"
currency = "0.4.0"
sqlparser = "0.7.0"
datafusion = "2.0.0"
futures = "0.3.9"
jsonwebtoken = "7.2.0"


[[bench]]
name = "xtract_profile"
harness = false
